--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,11 +1,27 @@
 // Custom theme
-$primary: #FE5B02;
-$info: #241F21;
-$secondary: #E1E1E1;
-$transition: all .25s linear;
+$primary: #fe5b02;
+$info: #241f21;
+$secondary: #e1e1e1;
+$transition: all 0.25s linear;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+// Supportive class
+.disOverflowY {
+  overflow-y: hidden;
+}
+
+.stickyTop {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  box-shadow: 3px 3px 5px var(--gray);
+  background-color: var(--light);
+  color: var(--dark);
+}
+
 .border-radius-lg {
-    border-radius: 30px!important;
+  border-radius: 30px !important;
 }
