--- a/sass/style.scss
+++ b/sass/style.scss
@@ -228,100 +228,102 @@ textarea {
 
 // Header
 header {
-  @include flexBetween();
-
-  ul {
+  .wrapper {
     @include flexBetween();
-    flex: 2;
 
-    @include xlTablet() {
-      display: none;
-    }
+    ul {
+      @include flexBetween();
+      flex: 2;
 
-    li {
-      white-space: nowrap;
+      @include xlTablet() {
+        display: none;
+      }
 
-      a {
-        color: var(--text-color);
+      li {
+        white-space: nowrap;
 
-        i {
-          display: none !important;
+        a {
+          color: var(--text-color);
+
+          i {
+            display: none !important;
+          }
         }
       }
     }
-  }
 
-  .bar {
-    flex: 2;
-    display: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-
-    @include xlTablet() {
-      display: block;
-    }
-  }
-
-  .letter-name {
-    flex: 1;
-    span {
-      @include flexCenter();
-      width: 40px;
-      height: 40px;
-      border-radius: 100rem;
-      background-color: var(--text-color);
-      color: var(--bg-color);
-      font-weight: bold;
-      font-size: 40px;
-      margin: auto;
+    .bar {
+      flex: 2;
+      display: none;
+      font-size: 1.5rem;
       cursor: pointer;
-      position: relative;
 
-      // &::before {
-      //   content: "\f0eb";
-      //   font-family: "Font Awesome 5 Free";
-      //   font-weight: 900;
-      //   display: inline-block;
-      //   font-style: normal;
-      //   font-variant: normal;
-      //   text-rendering: auto;
-      //   -webkit-font-smoothing: antialiased;
-      //   position: absolute;
-      //   animation: lightoff 3s alternate linear infinite;
-      // }
-
-      // @keyframes lightoff {
-      //   0% {
-      //     left: -1rem;
-      //     color: red;
-      //   }
-      //   25% {
-      //     left: -0.5rem;
-      //     color: blue;
-      //   }
-      //   50% {
-      //     left: 0;
-      //     right: 0;
-      //     color: yellow;
-      //   }
-      //   75% {
-      //     right: -0.5rem;
-      //     color: green;
-      //   }
-      //   100% {
-      //     right: -1rem;
-      //     color: red;
-      //   }
-      // }
+      @include xlTablet() {
+        display: block;
+      }
     }
-  }
 
-  .contact-btn {
-    flex: 2;
-    a {
-      padding: 0.5rem 1rem;
-      display: block;
-      margin-left: auto;
+    .letter-name {
+      flex: 1;
+      span {
+        @include flexCenter();
+        width: 40px;
+        height: 40px;
+        border-radius: 100rem;
+        background-color: var(--text-color);
+        color: var(--bg-color);
+        font-weight: bold;
+        font-size: 40px;
+        margin: auto;
+        cursor: pointer;
+        position: relative;
+
+        // &::before {
+        //   content: "\f0eb";
+        //   font-family: "Font Awesome 5 Free";
+        //   font-weight: 900;
+        //   display: inline-block;
+        //   font-style: normal;
+        //   font-variant: normal;
+        //   text-rendering: auto;
+        //   -webkit-font-smoothing: antialiased;
+        //   position: absolute;
+        //   animation: lightoff 3s alternate linear infinite;
+        // }
+
+        // @keyframes lightoff {
+        //   0% {
+        //     left: -1rem;
+        //     color: red;
+        //   }
+        //   25% {
+        //     left: -0.5rem;
+        //     color: blue;
+        //   }
+        //   50% {
+        //     left: 0;
+        //     right: 0;
+        //     color: yellow;
+        //   }
+        //   75% {
+        //     right: -0.5rem;
+        //     color: green;
+        //   }
+        //   100% {
+        //     right: -1rem;
+        //     color: red;
+        //   }
+        // }
+      }
+    }
+
+    .contact-btn {
+      flex: 2;
+      a {
+        padding: 0.5rem 1rem;
+        display: block;
+        margin-left: auto;
+      }
     }
   }
 }
@@ -565,6 +567,7 @@ header {
 
     blockquote {
       font-size: 1.5rem;
+      text-transform: capitalize;
     }
     p {
       text-indent: 1.5rem;
@@ -740,6 +743,7 @@ header {
         tr td,
         tr th {
           color: var(--text-color);
+          text-transform: capitalize;
           a iframe {
             display: none;
             position: absolute;
@@ -748,6 +752,10 @@ header {
             height: 400px;
           }
         }
+      }
+
+      tr:last-child td {
+        text-transform: none;
       }
     }
   }
@@ -813,6 +821,57 @@ header {
     @include tablet() {
       top: 0;
       right: 0;
+    }
+  }
+}
+
+// toggle-theme
+.toggle-theme-wrapper {
+  @include xlTablet() {
+    display: none;
+  }
+
+  position: fixed;
+  top: 50%;
+  right: 5px;
+  z-index: 11;
+  width: 5.5rem;
+  height: 2.5rem;
+  
+  label {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    
+    input {
+      &:checked + .slider {
+        background-color: $primary;
+        
+        &::before {
+          transform: translateX(48px);
+          background-color: $light;
+        }
+      }
+    }
+    
+    .slider {
+      height: 100%;
+      border-radius: 50rem;
+      background-color: $info;
+      transition: $transition;
+      
+      &::before {
+        content: "";
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50rem;
+        background-color: $secondary;
+        position: absolute;
+        bottom: 4px;
+        left: 4px;
+        transition: $transition;
+      }
     }
   }
 }
